# pyCLINE

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  automated_update_pycline.py  paper.bib  paper.md  pyproject.toml  requirements.txt
.gitlab/workflows/: draft-pdf.yml
docs/: modules.rst  pyCLINE.rst
docs/_build/html/: py-modindex.html  searchindex.js
docs/_build/html/.doctrees/: modules.doctree
docs/_build/html/_sources/: index.rst.txt
paper/: paper.md
source/: conf.py  contributing.rst  index.rst  modules.rst  pyCLINE.recovery_methods.rst  usage.rst
source/_build/: .buildinfo  contributing.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  pyCLINE.html  pyCLINE.recovery_methods.html  search.html  searchindex.js  usage.html
source/_build/.doctrees/: contributing.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree  pyCLINE.doctree  pyCLINE.recovery_methods.doctree  usage.doctree
source/_build/_sources/: contributing.rst.txt  index.rst.txt  intro.rst.txt  modules.rst.txt
source/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  pyCLINE.html  pyCLINE.recovery_methods.html  search.html
source/_build/html/.doctrees/: environment.pickle  index.doctree  pyCLINE.doctree  pyCLINE.recovery_methods.doctree
source/_build/html/_sources/: modules.rst.txt
src/pyCLINE/: __init__.py  example.py  generate_data.py  model.py  recovery_methods.py
src/pyCLINE.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pyCLINE/recovery_methods/: __init__.py  data_preparation.py  nn_training.py
tests/: test_data_preparation.py  test_example.py  test_generate_data.py  test_nn_training.py
